--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
+  "homepage": "https://gen95.github.io/ColorEditor",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -33,6 +36,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "react-color": "^2.18.1",
     "react-gesture-responder": "^2.1.0",
     "react-grid-dnd": "^2.1.2"
